# py_modules_connector

./: .gitignore  requirements.txt  setup.cfg
modules_connector/: client.py  server.py
tests/: module_a.py  module_b.py  test_both.py
