[metadata]
name = modules_connector
version = 0.1
author = Dmitry Yakovlev
author_email = opensuse12@gmail.com
description = Python modules connector
licence = MIT
url = 

[options]
python_requires = >=3.5
include_package_data = True
packages=find:
install_requires =
    rsa
    oe_common
    ov_aes_cipher
